--- a/birthday.htm
+++ b/birthday.htm
@@ -16,7 +16,7 @@
     <div class="birthday-container">
 
         <div class="image-container">
-            <img src="images/birthday.jpeg" alt="Birthday Cake">
+            <img src="./birthday.jpeg" alt="Birthday Cake">
         </div>
 
         <div class="message-form">
