--- a/countries.htm
+++ b/countries.htm
@@ -17,27 +17,27 @@
             <div class="slides">
 
                 <div class="slide">
-                    <img src="images/AlQouds.jpeg" alt="Palstine">
+                    <img src="./AlQouds.jpeg" alt="Palstine">
                     <div class="caption"><h3>Palstine</h3></div>
                 </div>
 
                 <div class="slide">
-                    <img src="images/Makah.jpeg" alt="Saudia Arabia">
+                    <img src="./Makah.jpeg" alt="Saudia Arabia">
                     <div class="caption"><h3>Saudaia Arabia</h3></div>
                 </div>
 
                 <div class="slide">
-                    <img src="images/Germany.jpeg" alt="Germany">
+                    <img src="./Germany.jpeg" alt="Germany">
                     <div class="caption"><h3>Germany</h3></div>
                 </div>
 
                 <div class="slide">
-                    <img src="images/Japan.jpeg" alt="Japan">
+                    <img src="./Japan.jpeg" alt="Japan">
                     <div class="caption"><h3>Japan</h3></div>
                 </div>
 
                 <div class="slide">
-                    <img src="images/Spain.jpeg" alt="Spain">
+                    <img src="./Spain.jpeg" alt="Spain">
                     <div class="caption"><h3>Spain</h3></div>
                 </div>
 
