--- a/home.htm
+++ b/home.htm
@@ -23,7 +23,7 @@
         </div>
 
         <div class="me-img">
-            <img src="images/profile_photo.jpeg" alt="profile img">
+            <img src="./profile_photo.jpeg" alt="profile img">
         </div>
     </div>
 
