--- a/hobbies.htm
+++ b/hobbies.htm
@@ -16,21 +16,21 @@
         <div class="card-grid">
             <!-- Card 1 -->
             <div class="card">
-                <img src="images/Reading.jpeg"  alt="Reading">
+                <img src="./Reading.jpeg"  alt="Reading">
                 <h3>Reading</h3>
                 <p>Reading is the food of the mind. And if you're a reader today, tomorro you're a leader.</p>
             </div>
 
             <!-- Card 2 -->
             <div class="card">
-                <img src="images/Writing.jpeg" alt="Writing">
+                <img src="./Writing.jpeg" alt="Writing">
                 <h3>Writing</h3>
                 <p>Writing is very important for me.</p>
             </div>
 
             <!-- Card 3 -->
             <div class="card">
-                <img src="images/Football.jpeg" alt="Football">
+                <img src="./Football.jpeg" alt="Football">
                 <h3>Football</h3>
                 <p>I love playing football, this is my favourit hobby.</p>
             </div>
@@ -43,28 +43,7 @@
                 <p>I try to solve some of problem by using programming languages</p>
             </div>
         </div>
-<!--
-        <br><br><br><br>
 
-        <div class="hobby">
-            <div class="hobby-images">
-                <img src="images/insta.jpeg" alt="Hobby1">
-                <p>Football</p>
-            </div>
-            <div class="hobby-images">
-                <img src="images/insta.jpeg" alt="Hobby2">
-                <p>Reading</p>
-            </div>
-            <div class="hobby-images">
-                <img src="images/insta.jpeg" alt="Hobby3">
-                <p>Writing</p>
-            </div>
-            <div class="hobby-images">
-                <img src="images/insta.jpeg" alt="Hobby4">
-                <p>Running</p>
-            </div>
-        </div>
--->
     </div>
 </body>
 
