--- a/contact.htm
+++ b/contact.htm
@@ -30,7 +30,7 @@
         </div>
 
         <div class="social-media">
-            <button class="btn" type="menu">Hire me</button>
+            <button class="btn" type="menu">Follow me</button>
             <ul class="ul-icons">
                 <li><a href="https://www.facebook.com/abdelhameed.mohammed.372" target="_blank"><i class="fab fa-facebook"></i></a></li>
                 <li><a href="https://www.twitter.com/" target="_blank"><i class="fab fa-twitter"></i></a></li>
