--- a/hobbies.htm
+++ b/hobbies.htm
@@ -16,21 +16,21 @@
         <div class="card-grid">
             <!-- Card 1 -->
             <div class="card">
-                <img src="./Reading.jpeg"  alt="Reading">
+                <img src="Reading.jpeg"  alt="Reading">
                 <h3>Reading</h3>
                 <p>Reading is the food of the mind. And if you're a reader today, tomorro you're a leader.</p>
             </div>
 
             <!-- Card 2 -->
             <div class="card">
-                <img src="./Writing.jpeg" alt="Writing">
+                <img src="Writing.jpeg" alt="Writing">
                 <h3>Writing</h3>
                 <p>Writing is very important for me.</p>
             </div>
 
             <!-- Card 3 -->
             <div class="card">
-                <img src="./Football.jpeg" alt="Football">
+                <img src="Football.jpeg" alt="Football">
                 <h3>Football</h3>
                 <p>I love playing football, this is my favourit hobby.</p>
             </div>
